--- a/html/gioi-thieu.html
+++ b/html/gioi-thieu.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi tiết sản phẩm | MobiShop</title>
+    <title>Giới thiệu | MobiShop</title>
     <link rel="icon" href="../images/logo2.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/product-detail.css">
     <link rel="stylesheet" href="../css/all.css">
-    <link rel="stylesheet" type="text/css" href="../slick-1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="../slick-1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" href="../css/index.css">
 
     <!-- js -->
     <script src="../js/jquery-3.5.1.slim.min.js"></script>
     <script src="../js/popper.min.js"></script>
     <script src="../js/jquery-3.7.1.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="../slick-1.8.1/slick/slick.min.js"></script>
-    <script src="../js/product-detail.js" defer></script>
+    <script src="../js/index.js" defer></script>
     <script src="../js/auth.js"></script>
+
+
+    <style>
+        .body {
+            margin-left: 10px;
+        }
+
+        .text-box {
+            background-color: #f33b4a;
+            /* Màu đỏ */
+            color: white;
+            padding: 20px;
+            border-radius: 20px;
+            line-height: 1.6;
+            margin: 10px;
+        }
+    </style>
+
 </head>
 
 <body>
-
     <!-- top header -->
     <div class="container-fluid">
         <div class="row text-center" id="top-header">
@@ -72,7 +86,7 @@
                         </a>
                     </li>
                 </ul>
-            </div>            
+            </div>
         </div>
     </div>
     <!-- end top header -->
@@ -84,7 +98,7 @@
         <!-- Brand and logo -->
         <a class="navbar-brand" href="../html/index.html"><img src="../images/logo2.png" alt="logo"
                 style="width:60px;"></a>
-        <a href="" class="navbar-brand font-weight-bold">MobiShop</a>
+        <a href="../html/index.html" class="navbar-brand font-weight-bold">MobiShop</a>
         <!-- toggler hiện menu khi thu nhỏ -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,7 +109,7 @@
         <!-- navbar links -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto" id="nav-menu-link">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="../html/index.html"><i class="fa fa-home" aria-hidden="true"></i> TRANG
                         CHỦ</a>
                 </li>
@@ -124,11 +138,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="../html/blog.html"> <i class="fa-solid fa-comments"></i> BÀI VIẾT</a>
+                    <a class="nav-link" href="../html/blog.html"> <i class="fa-solid fa-comments"></i> TIN TỨC</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="../html/site-map.html"> <i class="fa-solid fa-money-check-dollar"></i>
+                    <a class="nav-link" href="../html/site-map.html"> <i class="fa-solid fa-sitemap"></i>
                         Site Map</a>
                 </li>
 
@@ -136,6 +150,8 @@
 
             <!-- nav right và mục tìm kiếm -->
             <form id="nav-form-search" class="form-inline ml-auto">
+
+
                 <!-- mục tìm kiếm -->
                 <div class="input-group" id="input-search-top">
                     <!-- Danh mục sản phẩm -->
@@ -159,6 +175,7 @@
                         </button>
                     </div>
                 </div>
+
             </form>
         </div>
     </nav>
@@ -167,86 +184,65 @@
     <nav aria-label="breadcrumb ">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="../html/index.html">Trang chủ</a></li>
-            <li class="breadcrumb-item"><a href="../html/shop.html">Cửa Hàng</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Chi tiết sản phẩm</li>
+            <li class="breadcrumb-item active" aria-current="page">Về chúng tôi</li>
         </ol>
     </nav>
 
+    <!-- HTML Structure -->
     <div class="main">
-        <div class="container">
-            <div class="product-detail-box">
-                <h5 class="product-name" id="product-name"></h5> <!-- Added ID -->
-                <div class="row">
-                    <div class="col-md-5 text-center product-image">
-                        <img id="product-image" src="#" alt=""> <!-- Added ID -->
-                    </div>
-                    <div class="col-md-7">
-                        <span class="discount-badge" id="discount-badge"></span>
-                        <p class="product-description"><strong>Thông tin sản phẩm:</strong></p>
-                        <div id="product-description"></div>
-                        <p class="product-detail"><strong>Chi tiết sản phẩm:</strong></p>
-                        <div id="product-detail">
-                            <ul id="product-details-list"></ul>
-                        </div>
-                        <div class="product-price">
-                            <p class="price-original">Giá gốc: <span id="price-original"></span></p>
-                            <p class="price-discount">Giá giảm: <span id="price-discount"></span></p>
-                        </div>
-
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <button class="btn btn-outline-secondary" type="button"
-                                    id="decrease-quantity">-</button>
-                            </div>
-                            <input type="text" class="form-control text-center" value="1" id="quantity-input">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button"
-                                    id="increase-quantity">+</button>
-                            </div>
-                        </div>
-                        <div class="btn-custom">
-                            <button type="button" id="add-to-cart-btn" class="btn btn-info btn-custom1">Thêm vào giỏ
-                                hàng</button>
-                            <button type="button" id="buy-now-btn" class="btn btn-warning btn-custom2">Mua ngay</button>
-                        </div>
-                    </div>
+        <h3 class="text-danger text-center" style="font-weight: bold; margin-top: -16px;">THÀNH LẬP NĂM 2024</h3>
+        <div class="body ">
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="text-box col-10 ">
+                    <h2>Về chúng tôi</h2>
+                    <p>
+                        MobiShop là hệ thống bán lẻ điện thoại di động hàng đầu tại Việt Nam, chuyên cung cấp các sản
+                        phẩm
+                        điện thoại chính hãng từ các thương hiệu nổi tiếng như iPhone, Samsung, Xiaomi, OPPO, Asus,
+                        Realme,
+                        Vivo và nhiều thương hiệu khác.
+                    </p>
+                    <p>
+                        Với phương châm mang đến cho khách hàng những sản phẩm chất lượng cao, dịch vụ tận tâm và trải
+                        nghiệm mua sắm tuyệt vời, MobiShop luôn cam kết cung cấp các sản phẩm chính hãng với giá cả hợp
+                        lý,
+                        bảo hành đáng tin cậy. Chúng tôi không chỉ là địa chỉ tin cậy cho những tín đồ công nghệ mà còn
+                        luôn
+                        tiên phong trong việc áp dụng công nghệ bán lẻ hiện đại, giúp khách hàng dễ dàng tiếp cận những
+                        sản
+                        phẩm mới nhất và phù hợp nhất với nhu cầu của mình.
                 </div>
             </div>
-        </div>
-        <br>
-    </div>
-
-    <!-- Biểu tượng Giỏ hàng nhỏ-->
-    <div id="cart-icon-container" class="cart-icon-container">
-        <a href="../html/shopping-cart.html">
-            <i class="fa fa-shopping-cart fa-lg"></i>
-            <span id="cart-count" class="cart-count">0</span>
-        </a>
-    </div>
-
-    <!-- Modal mở giỏ hảng -->
-    <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="cartModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="cartModalLabel">Sản phẩm đã được thêm vào giỏ hàng <i
-                            class="fa-solid fa-cart-shopping fa-lg" style="color: #63E6BE;"></i></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>Bạn có muốn xem giỏ hàng không?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn" data-dismiss="modal">Tiếp tục mua sắm</button>
-                    <a href="../html/shopping-cart.html" class="btn">Xem giỏ hàng</a>
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="text-box col-10 ">
+                    <h2>Chính Sách Mua Hàng</h2>
+                    <p>
+                        Sản phẩm tại MobiShop được nhập khẩu chính hãng và đi kèm chế độ bảo hành chính hãng từ các
+                        thương
+                        hiệu nổi tiếng, giúp khách hàng yên tâm về chất lượng và độ tin cậy.
+                    </p>
+                    <p>
+                        MobiShop cam kết hỗ trợ đổi trả sản phẩm theo chính sách đổi trả của hệ thống, giúp khách hàng
+                        có
+                        thể dễ dàng thay đổi sản phẩm nếu không hài lòng hoặc gặp phải lỗi kỹ thuật.
+                    </p>
+                    <p>Chúng tôi đảm bảo rằng tất cả sản phẩm tại MobiShop đều có chất lượng vượt trội, được kiểm tra kỹ
+                        lưỡng, và có độ bền cao, phù hợp với nhu cầu và yêu cầu sử dụng của khách hàng.</p>
+                    <p>MobiShop cung cấp dịch vụ giao hàng tận nơi nhanh chóng và thuận tiện đến tất cả các tỉnh thành
+                        trên
+                        cả nước, từ thành thị đến nông thôn, đảm bảo sản phẩm sẽ được giao đúng thời gian và địa điểm
+                        yêu
+                        cầu.</p>
                 </div>
             </div>
+            <br>
         </div>
     </div>
 
+
+
+
+    <!-- foooter start -->
     <footer>
         <div class="mt-5 w-100">
             <div class="container">
@@ -329,5 +325,6 @@
     </footer>
 
 </body>
+
 
 </html>
