--- a/html/blog.html
+++ b/html/blog.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi tiết sản phẩm | MobiShop</title>
+    <title>Tin tức | MobiShop</title>
     <link rel="icon" href="../images/logo2.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/product-detail.css">
     <link rel="stylesheet" href="../css/all.css">
-    <link rel="stylesheet" type="text/css" href="../slick-1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="../slick-1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" href="../css/index.css">
 
     <!-- js -->
     <script src="../js/jquery-3.5.1.slim.min.js"></script>
     <script src="../js/popper.min.js"></script>
     <script src="../js/jquery-3.7.1.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="../slick-1.8.1/slick/slick.min.js"></script>
-    <script src="../js/product-detail.js" defer></script>
+    <script src="../js/index.js" defer></script>
     <script src="../js/auth.js"></script>
+
 </head>
 
 <body>
-
     <!-- top header -->
     <div class="container-fluid">
         <div class="row text-center" id="top-header">
@@ -72,7 +69,7 @@
                         </a>
                     </li>
                 </ul>
-            </div>            
+            </div>
         </div>
     </div>
     <!-- end top header -->
@@ -84,7 +81,7 @@
         <!-- Brand and logo -->
         <a class="navbar-brand" href="../html/index.html"><img src="../images/logo2.png" alt="logo"
                 style="width:60px;"></a>
-        <a href="" class="navbar-brand font-weight-bold">MobiShop</a>
+        <a href="../html/index.html" class="navbar-brand font-weight-bold">MobiShop</a>
         <!-- toggler hiện menu khi thu nhỏ -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -123,12 +120,12 @@
                     </div>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="../html/blog.html"> <i class="fa-solid fa-comments"></i> BÀI VIẾT</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="../html/blog.html"> <i class="fa-solid fa-comments"></i> TIN TỨC</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="../html/site-map.html"> <i class="fa-solid fa-money-check-dollar"></i>
+                    <a class="nav-link" href="../html/site-map.html"> <i class="fa-solid fa-sitemap"></i>
                         Site Map</a>
                 </li>
 
@@ -136,6 +133,8 @@
 
             <!-- nav right và mục tìm kiếm -->
             <form id="nav-form-search" class="form-inline ml-auto">
+
+
                 <!-- mục tìm kiếm -->
                 <div class="input-group" id="input-search-top">
                     <!-- Danh mục sản phẩm -->
@@ -159,6 +158,7 @@
                         </button>
                     </div>
                 </div>
+
             </form>
         </div>
     </nav>
@@ -167,86 +167,168 @@
     <nav aria-label="breadcrumb ">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="../html/index.html">Trang chủ</a></li>
-            <li class="breadcrumb-item"><a href="../html/shop.html">Cửa Hàng</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Chi tiết sản phẩm</li>
+            <li class="breadcrumb-item active" aria-current="page">Tin tức</li>
         </ol>
     </nav>
 
     <div class="main">
-        <div class="container">
-            <div class="product-detail-box">
-                <h5 class="product-name" id="product-name"></h5> <!-- Added ID -->
-                <div class="row">
-                    <div class="col-md-5 text-center product-image">
-                        <img id="product-image" src="#" alt=""> <!-- Added ID -->
-                    </div>
-                    <div class="col-md-7">
-                        <span class="discount-badge" id="discount-badge"></span>
-                        <p class="product-description"><strong>Thông tin sản phẩm:</strong></p>
-                        <div id="product-description"></div>
-                        <p class="product-detail"><strong>Chi tiết sản phẩm:</strong></p>
-                        <div id="product-detail">
-                            <ul id="product-details-list"></ul>
-                        </div>
-                        <div class="product-price">
-                            <p class="price-original">Giá gốc: <span id="price-original"></span></p>
-                            <p class="price-discount">Giá giảm: <span id="price-discount"></span></p>
-                        </div>
+        <h3 class="text-danger text-center" style="font-weight: bold; margin-top: -16px;">TIN TỨC MỚI NHẤT</h3>
 
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <button class="btn btn-outline-secondary" type="button"
-                                    id="decrease-quantity">-</button>
-                            </div>
-                            <input type="text" class="form-control text-center" value="1" id="quantity-input">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button"
-                                    id="increase-quantity">+</button>
-                            </div>
-                        </div>
-                        <div class="btn-custom">
-                            <button type="button" id="add-to-cart-btn" class="btn btn-info btn-custom1">Thêm vào giỏ
-                                hàng</button>
-                            <button type="button" id="buy-now-btn" class="btn btn-warning btn-custom2">Mua ngay</button>
-                        </div>
-                    </div>
+        <br>
+
+        <div class="newPost">
+            <div class="newPostItem">
+                <div class="newPostImg">
+                    <img src="../images/Xiaomi-15-Pro-vs-iPhone-16-Pro-cover.jpg" alt="">
+                </div>
+                <div class="textNewPost1">
+                    <h6 class="bold-text">So sánh Xiaomi 15 Pro và iPhone 16 Pro: Siêu phẩm nào tốt và đáng mua hơn?
+                    </h6>
+                    <p class="truncated-text">Xiaomi 15 Pro là một trong hai mẫu flagship vừa được Xiaomi ra mắt cách
+                        đây không lâu.
+                        Sản phẩm không chỉ có thiết kế cao cấp mà còn mang đến những nâng cấp ấn tượng về cấu hình cũng
+                        như tính năng so
+                        với thế hệ trước. Ngay sau khi điện thoại này ra mắt, nó ngay lập tức được đưa lên bàn cân so
+                        sánh với
+                        iPhone 16 Pro. Vậy giữa hai sản phẩm này thì đâu mới là lựa chọn tốt hơn cho người dùng?</p>
+                </div>
+            </div>
+
+            <div class="newPostItem">
+                <div class="newPostImg">
+                    <img src="../images/samsung-sao-chep-tinh-nang-tot-nhat-cua-apple-intelligence-1.jpg" alt="">
+                </div>
+                <div class="textNewPost2">
+                    <h6 class="bold-text">Tính năng tốt nhất của Apple Intelligence sắp được Samsung sao chép lên One UI
+                        7?</h6>
+                    <p class="truncated-text">Trên dòng Galaxy S24 ra mắt hồi đầu năm nay, Samsung đã tích hợp nhiều
+                        tính năng
+                        trí tuệ nhân tạo hữu ích, được gọi chung là Galaxy AI. Bộ Galaxy AI cho phép người dùng tóm tắt
+                        văn bản,
+                        dịch cuộc gọi hay thậm chí là chỉnh sửa ảnh bằng AI tạo sinh,... Không dừng lại ở đó, thông tin
+                        rò rỉ mới
+                        nhất cho biết trên One UI 7, Samsung sẽ bổ sung một tính năng đặc biệt cho Galaxy AI, được lấy
+                        cảm hứng từ
+                        đối thủ Apple Intelligence.</p>
+                </div>
+            </div>
+
+            <div class="newPostItem">
+                <div class="newPostImg">
+                    <img src="../images/iphone-14-plus-chuong-trinh-sua-chua.jpg" alt="">
+                </div>
+                <div class="textNewPost3">
+                    <h6 class="bold-text">Apple ra mắt chương trình sửa chữa miễn phí camera iPhone 14 Plus</h6>
+                    <p class="truncated-text">Hôm nay, Apple đã công bố ra mắt chương trình sửa chữa mới cho iPhone 14
+                        Plus,
+                        giải quyết vấn đề về camera.Theo công ty cho biết, "một tỷ lệ rất nhỏ" các thiết bị ‌iPhone 14‌
+                        Plus không
+                        hiển thị bản xem trước của hình ảnh được chụp bằng camera sau.</p>
+                </div>
+            </div>
+
+            <div class="newPostItem">
+                <div class="newPostImg">
+                    <img src="../images/camera-Xiaomi-15-Ultra-cover.jpg" alt="">
+                </div>
+                <div class="textNewPost4">
+                    <h6 class="bold-text">Thêm thông tin về hệ thống camera cực khủng của Xiaomi 15 Ultra được tiết lộ
+                    </h6>
+                    <p class="truncated-text">Xiaomi 15 Pro là một trong hai mẫu flagship vừa được Xiaomi ra mắt cách
+                        đây không lâu.
+                        Sản phẩm không chỉ có thiết kế cao cấp mà còn mang đến những nâng cấp ấn tượng về cấu hình cũng
+                        như tính năng so
+                        với thế hệ trước. Ngay sau khi điện thoại này ra mắt, nó ngay lập tức được đưa lên bàn cân so
+                        sánh với
+                        iPhone 16 Pro. Vậy giữa hai sản phẩm này thì đâu mới là lựa chọn tốt hơn cho người dùng?</p>
+                </div>
+            </div>
+
+        </div>
+
+        <br>
+
+        <div class="newPost">
+            <div class="newPostItem">
+                <div class="newPostImg">
+                    <img src="../images/Vivo.jpg" alt="">
+                </div>
+                <div class="textNewPost1">
+                    <h6 class="bold-text">Mới đây, Vivo đã cho ra mắt mẫu điện thoại Vivo Y100i tại Trung Quốc.
+                    </h6>
+                    <p class="truncated-text">Vivo Y100i được trang bị chip MediaTek Dimensity 6020, đi kèm 12 GB RAM
+                        cùng
+                        với 512 GB dung lượng lưu trữ,
+                        giúp bạn thoải mái lưu các tệp tin và tài liệu lớn. Thiết bị mới ra mắt có giá bán khởi điểm từ
+                        1.599 CNY (khoảng 5.4 triệu đồng)
+                        với ba tùy chọn màu sắc: Đen, Xanh, Hồng.</p>
+                </div>
+            </div>
+
+            <div class="newPostItem">
+                <div class="newPostImg">
+                    <img src="../images/opporeno10.jpg" alt="">
+                </div>
+                <div class="textNewPost2">
+                    <h6 class="bold-text">OPPO Reno series giảm giá cuối tháng, chỉ từ 7.19 triệu đã có điện thoại sạc
+                        nhanh, chụp hình xịn
+                    </h6>
+                    <p class="truncated-text">Máy thể hiện hiệu suất tốt trong phân khúc nhờ độ ổn định và khả năng tối
+                        ưu
+                        điện năng hiệu quả trên con chip MediaTek Dimensity 7050,
+                        kết hợp với 8 RAM và 256 GB bộ nhớ trong cho phép xử lý mượt mà các tác vụ, đa nhiệm cũng không
+                        xảy
+                        ra hiện tượng giật, lag phải tải lại từ đầu.
+                        Ngoài ra, smartphone còn sở hữu viên pin 5.000 mAh,đem lại thời gian sử dụng lâu dài và tiết
+                        kiệm
+                        thời gian sạc pin cho bạn nhờ công nghệ sạc nhanh 67 W.</p>
+                </div>
+            </div>
+
+            <div class="newPostItem">
+                <div class="newPostImg">
+                    <img src="../images/redmi.jpg" alt="">
+                </div>
+                <div class="textNewPost3">
+                    <h6 class="bold-text">Redmi Note 13 series xác nhận ngày ra mắt</h6>
+                    <p class="truncated-text">Theo thông tin cập nhật, Redmi Note 13 Series ra mắt thị trường nội địa
+                        với 3
+                        phiên bản, gồm Redmi Note 13 5G, Note 13 Pro 5G và Pro Plus 5G. Trong đó,
+                        phiên bản Pro và Pro+ được cải thiện rất nhiều về cấu hình và hứa hẹn mang đến trải nghiệm mượt
+                        mà
+                        không kém các dòng máy cao cấp khác.</p>
+                </div>
+            </div>
+
+            <div class="newPostItem">
+                <div class="newPostImg">
+                    <img src="../images/oneplus.jpg" alt="">
+                </div>
+                <div class="textNewPost4">
+                    <h6 class="bold-text">OnePlus 12 ra mắt: Chip Snapdragon 8 Gen 3, màn hình độ sáng lên đến 4.500
+                        nits,
+                        camera xịn
+                    </h6>
+                    <p class="truncated-text">Về thiết kế tổng thể, OnePlus 12 có nhiều điểm tương đồng với thế hệ trước
+                        nhưng thanh trượt thông báo của máy đã được di chuyển từ
+                        cạnh bên phải sang cạnh bên trái. Theo chia sẻ từ OnePlus, mục đích di chuyển thanh trượt là
+                        nhường
+                        chỗ cho bộ phânh ăng-ten tích hợp mới
+                        (ăng-ten này cải thiện hiệu suất tín hiệu và giảm độ trễ khi chơi game). Vị trí tối ưu cho
+                        ăng-ten
+                        chơi game là giữa các ngón trỏ của người dùng khi họ cầm điện thoại theo hướng ngang.
+                    </p>
                 </div>
             </div>
         </div>
         <br>
     </div>
 
-    <!-- Biểu tượng Giỏ hàng nhỏ-->
-    <div id="cart-icon-container" class="cart-icon-container">
-        <a href="../html/shopping-cart.html">
-            <i class="fa fa-shopping-cart fa-lg"></i>
-            <span id="cart-count" class="cart-count">0</span>
-        </a>
-    </div>
 
-    <!-- Modal mở giỏ hảng -->
-    <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="cartModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="cartModalLabel">Sản phẩm đã được thêm vào giỏ hàng <i
-                            class="fa-solid fa-cart-shopping fa-lg" style="color: #63E6BE;"></i></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>Bạn có muốn xem giỏ hàng không?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn" data-dismiss="modal">Tiếp tục mua sắm</button>
-                    <a href="../html/shopping-cart.html" class="btn">Xem giỏ hàng</a>
-                </div>
-            </div>
-        </div>
-    </div>
 
+
+
+    <!-- foooter start -->
     <footer>
         <div class="mt-5 w-100">
             <div class="container">
@@ -329,5 +411,6 @@
     </footer>
 
 </body>
+
 
 </html>
