--- a/html/shopping-cart.html
+++ b/html/shopping-cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart</title>
+    <title>Giỏ Hàng | MobiShop</title>
     <link rel="icon" href="../images/logo2.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
@@ -21,6 +21,7 @@
     <script src="../js/bootstrap.min.js"></script>
     <script src="../slick-1.8.1/slick/slick.min.js"></script>
     <script src="../js/shopping-cart.js" defer></script>
+    <script src="../js/auth.js"></script>
 </head>
 
 <body>
@@ -41,26 +42,37 @@
                 </ul>
             </div>
             <div class="col-md-6 my-2 p-1">
-                <ul id="top-contact">
-                    <li class="list-inline-item mx-2"><a href="../html/thanh-vien.html"><i class="fa-solid fa-users"
-                                style="color: #63E6BE;"></i> Thành viên</a></li>
-                    <li class="list-inline-item mx-2"><a href="../html/shopping-cart.html"><i
-                                class="fa-solid fa-cart-shopping"></i> Giỏ
-                            hàng</a>
+                <ul id="top-contact" class="list-inline mb-0">
+                    <li class="list-inline-item mx-2">
+                        <a href="../html/thanh-vien.html">
+                            <i class="fa-solid fa-users" style="color: #63E6BE;"></i> Thành viên
+                        </a>
                     </li>
-                    <li class="list-inline-item mx-2"><a href="../html/dang-ky.html"><i class="fa-solid fa-key"
-                                style="color: #FFD43B;"></i>
-                            Đăng
-                            kí</a></li>
-                    <li class="list-inline-item mx-2 active "><a href="../html/dang-nhap.html"><i
-                                class="fa-solid fa-user"></i> Đăng
-                            nhập</a></li>
-
-                    <li class="list-inline-item mx-2"><a href="../html/lien-he.html"><i class="fa-solid fa-circle-info"
-                                style="color: #e41d07;"></i> Liên
-                            hệ</a></li>
+                    <li class="list-inline-item mx-2">
+                        <a href="../html/shopping-cart.html">
+                            <i class="fa-solid fa-cart-shopping"></i> Giỏ hàng
+                        </a>
+                    </li>
+                    <li id="register-link" class="list-inline-item mx-2">
+                        <a href="../html/dang-ky.html">
+                            <i class="fa-solid fa-key" style="color: #FFD43B;"></i> Đăng kí
+                        </a>
+                    </li>
+                    <li id="login-link" class="list-inline-item mx-2 active">
+                        <a href="../html/dang-nhap.html">
+                            <i class="fa-solid fa-user"></i> Đăng nhập
+                        </a>
+                    </li>
+                    <li class="list-inline-item mx-2">
+                        <div id="user-options" class="d-inline"></div>
+                    </li>
+                    <li class="list-inline-item" style="margin-left:-15px;">
+                        <a href="../html/gioi-thieu.html">
+                            <i class="fa-solid fa-circle-info" style="color: #e41d07;"></i> Về chúng tôi
+                        </a>
+                    </li>
                 </ul>
-            </div>
+            </div>            
         </div>
     </div>
     <!-- end top header -->
@@ -81,7 +93,7 @@
         <!-- navbar links -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto" id="nav-menu-link">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="../html/index.html"><i class="fa fa-home" aria-hidden="true"></i> TRANG
                         CHỦ</a>
                 </li>
@@ -99,33 +111,33 @@
                     </a>
                     <div class="dropdown-menu">
                         <h6 class="dropdown-header"><strong>Hãng điện thoại</strong></h6>
-                        <a class="dropdown-item" href="">Iphone</a>
-                        <a class="dropdown-item" href="">Samsung</a>
-                        <a class="dropdown-item" href="">Xiaomi</a>
-                        <a class="dropdown-item" href="">Oppo</a>
-                        <a class="dropdown-item" href="">Realme</a>
-                        <a class="dropdown-item" href="">Vivo</a>
-                        <a class="dropdown-item" href="">Nokia</a>
+                        <a class="dropdown-item" href="../html/iphone.html">Iphone</a>
+                        <a class="dropdown-item" href="../html/samsung.html">Samsung</a>
+                        <a class="dropdown-item" href="../html/xiaomi.html">Xiaomi</a>
+                        <a class="dropdown-item" href="../html/oppo.html">Oppo</a>
+                        <a class="dropdown-item" href="../html/realme.html">Realme</a>
+                        <a class="dropdown-item" href="../html/vivo.html">Vivo</a>
+                        <a class="dropdown-item" href="../html/nokia.html">Nokia</a>
                     </div>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="../html/blog.html"> <i class="fa-solid fa-comments"></i> BÀI VIẾT</a>
+                    <a class="nav-link" href="../html/blog.html"> <i class="fa-solid fa-comments"></i> TIN TỨC</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="../html/gio-hang.html"> <i class="fa-solid fa-money-check-dollar"></i>
-                        Site map</a>
+                    <a class="nav-link" href="../html/site-map.html"> <i class="fa-solid fa-sitemap"></i>
+                        Site Map</a>
                 </li>
 
             </ul>
 
             <!-- nav right và mục tìm kiếm -->
-            <form id="nav-form-search" class="form-inline ml-auto" action="">
+            <form id="nav-form-search" class="form-inline ml-auto">
                 <!-- mục tìm kiếm -->
                 <div class="input-group" id="input-search-top">
                     <!-- Danh mục sản phẩm -->
-                    <select name="" id="select-product-category" class="custom-select">
+                    <select name="product-category" id="select-product-category" class="custom-select">
                         <option value="all">Tất cả sản phẩm</option>
                         <option value="Iphone">Iphone</option>
                         <option value="Samsung">Samsung</option>
@@ -206,7 +218,7 @@
                         <div class="introduce">
                             <h4 style="font-weight: bold;">MobiShop</h4>
                             <ul>
-                                <li><a href="#">Giới thiệu</a></li>
+                                <li><a href="../html/gioi-thieu.html">Giới thiệu</a></li>
                                 <li><a href="#">Tuyển dụng</a></li>
                                 <li><a href="#">Black Friday 2024</a></li>
                             </ul>
@@ -215,23 +227,29 @@
                         <div class="contactFooter">
                             <h4 style="font-weight: bold;">Liên hệ</h4>
                             <ul>
-                                <i class="fa-solid fa-location-dot" style="color: #63E6BE;"></i>
-                                <span>Địa chỉ: 12 Nguyễn Văn Bảo, Phường 4, Quận Gò Vấp, TP.HCM</span>
-                                <br>
-                                <i class="fa-solid fa-phone" style="color: #74C0FC;"></i>
-                                <a href="tel:+0898345789">Điện thoại: 0898.345.789</a>
-                                <br>
-                                <i class="fa-solid fa-envelope" style="color: #e62e00;"></i>
-                                <a href="mailto:cskh@mobishop.com">Email: cskh@mobishop.com</a>
-                                <br>
-                                <i class="fa-solid fa-globe" style="color: #63E6BE;"></i>
-                                <a href="#">Website: </a>
+                                <li>
+                                    <i class="fa-solid fa-location-dot" style="color: #63E6BE;"></i>
+                                    <span>Địa chỉ: 12 Nguyễn Văn Bảo, Phường 4, Quận Gò Vấp, TP.HCM</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-phone" style="color: #74C0FC;"></i>
+                                    <a href="tel:+0898345789">Điện thoại: 0898.345.789</a>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-envelope" style="color: #e62e00;"></i>
+                                    <a href="mailto:cskh@mobishop.com">Email: cskh@mobishop.com</a>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-globe" style="color: #63E6BE;"></i>
+                                    <a href="https://luxkaito.github.io/BTL_HTCNW/html/index.html">Website: mobishop.com.vn</a>
+                                </li>
                             </ul>
                         </div>
 
+
                         <div class="interactFooter">
                             <h4 style="font-weight: bold;">Tương tác với chúng tôi</h4>
-                            <ul class="bottom-social-media" class="font-size-lagre">
+                            <ul class="bottom-social-media">
                                 <li class="list-inline-item mx-2"><a href="#"><i class="fab fa-facebook"></i></a></li>
                                 <li class="list-inline-item mx-2"><a href="#"><i class="fab fa-instagram"></i></a></li>
                                 <li class="list-inline-item mx-2"><a href="#"><i class="fab fa-tiktok"></i></a></li>
@@ -264,7 +282,6 @@
                             <div class="col-md-12">
                                 <hr>
                                 <p class="text-center"> ©2024 MobiShop by Nguyễn Huy Khang & Lê Quốc Hưng</p>
-                                <p class="text-center"> Nguyễn Huy Khang - 22710921 - DHHTTT18BTT</p>
                             </div>
                         </div>
                     </div>
@@ -272,3 +289,6 @@
             </div>
         </div>
     </footer>
+</body>
+
+</html>
