--- a/html/site-map.html
+++ b/html/site-map.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sitemap</title>
+    <title>Sitemap | MobiShop</title>
+    <link rel="icon" href="../images/logo2.png" type="image/x-icon">
     <style>
         * {
             margin: 0;
